--- a/registration.html
+++ b/registration.html
@@ -43,53 +43,51 @@
 
         <form action="./show_data.html" method="get" target="_blank">
 
-          <fieldset class="espacio-inf">
+          <fieldset class="espacio-inf" id="fieldset1">            
             <div class="div3">
-              <div>
-                <label>Player’s First Name:<input type="text" id="fname" name="first_name" class="linea-input"></label>
-                <label>Last Name:<input type="text" id="lname" name="last_name" class="linea-input"></label>                  
-              </div>              
-              <div>                  
-                <label>Street Address:<input type="text" id="street" name="street" class="linea-input"></label>                  
+              <label>Player’s First Name:<input type="text" id="fname" name="first_name" class="linea-input"></label>
+              <label>Last Name:<input type="text" id="lname" name="last_name" class="linea-input"></label>                  
+            </div>
+            <div>
+              <label>Street Address:<input type="text" id="street" name="street" class="linea-input"></label>
+            </div>           
+            <div>
+              <label>City:<input type="text" id="city" name="city" class="linea-input"></label>                  
+              <label>Zip Code:<input type="text" id="zcode" name="zip_code" class="linea-input"></label>                  
+            </div>
+            <div class="div3">
+              <label for="bdate">Birth Date:</label>
+              <input type="date" id="bdate" name="birth_date" class="linea-input">                
+              <div class="div1 margen1">            
+                <p>Gender:</p>
+                <input type="radio" id="female" name="gender" value="Female">
+                <label for="female">Female</label>
+                <input type="radio" id="male" name="gender" value="Male">
+                <label for="male">Male</label>
               </div>
-              <div>
-                <label>City:<input type="text" id="city" name="city" class="linea-input"></label>                  
-                <label>Zip Code:<input type="text" id="zcode" name="zip_code" class="linea-input"></label>                  
-              </div>
-              <div class="div4">
-                <label for="bdate">Birth Date:</label>
-                <input type="date" id="bdate" name="birth_date" class="linea-input">                
-                <div class="div1 margen1">            
-                  <p>Gender:</p>
-                  <input type="radio" id="female" name="gender" value="Female">
-                  <label for="female">Female</label>
-                  <input type="radio" id="male" name="gender" value="Male">
-                  <label for="male">Male</label>
-                </div>
-              </div>              
+            </div>              
 
-              <div class="div1">
-                <p>Grade:</p>
-                <input type="radio" id="preschool" name="grade" value="Pre-School">
-                <label for="preschool">Pre-School</label>
-                <input type="radio" id="1st" name="grade" value="1st">
-                <label for="1st">1st</label>
-                <input type="radio" id="2nd" name="grade" value="2nd">
-                <label for="2nd">2nd</label>
-                <input type="radio" id="3rd" name="grade" value="3rd">
-                <label for="3rd">3rd</label>
-                <input type="radio" id="4th" name="grade" value="4th">
-                <label for="4th">4th</label>
-                <input type="radio" id="5th" name="grade" value="5th">
-                <label for="5th">5th</label>
-              </div>              
-            </div>            
-          </fieldset>
+            <div class="div1">
+              <p>Grade:</p>
+              <input type="radio" id="preschool" name="grade" value="Pre-School">
+              <label for="preschool">Pre-School</label>
+              <input type="radio" id="1st" name="grade" value="1st">
+              <label for="1st">1st</label>
+              <input type="radio" id="2nd" name="grade" value="2nd">
+              <label for="2nd">2nd</label>
+              <input type="radio" id="3rd" name="grade" value="3rd">
+              <label for="3rd">3rd</label>
+              <input type="radio" id="4th" name="grade" value="4th">
+              <label for="4th">4th</label>
+              <input type="radio" id="5th" name="grade" value="5th">
+              <label for="5th">5th</label>
+            </div>          
+          </fieldset>         
 
           <fieldset class="espacio-inf">
             <h3>Which elementary school do you live near?</h3>            
             <label for="closest-school">Closest School:</label>
-            <select name="schools" id="closest-school">
+            <select name="schools">
               <option value="" selected>Plese select one</option>
               <option value="AJ Katzenmaier">AJ Katzenmaier</option>
               <option value="Greenbay">Greenbay</option>
