--- a/registration.html
+++ b/registration.html
@@ -44,21 +44,21 @@
         <form action="./show_data.html" method="get" target="_blank">
 
           <fieldset class="espacio-inf" id="fieldset1">            
-            <div class="div3">
+            <div class="div-organizador1">
               <label>Player’s First Name:<input type="text" id="fname" name="first_name" class="linea-input"></label>
               <label>Last Name:<input type="text" id="lname" name="last_name" class="linea-input"></label>                  
             </div>
-            <div>
-              <label>Street Address:<input type="text" id="street" name="street" class="linea-input"></label>
+            <div class="div-organizador1">
+              <label>Street Address:<input type="text" id="street" name="street" class="linea-input"></label>              
             </div>           
-            <div>
+            <div class="div-organizador1">
               <label>City:<input type="text" id="city" name="city" class="linea-input"></label>                  
               <label>Zip Code:<input type="text" id="zcode" name="zip_code" class="linea-input"></label>                  
             </div>
-            <div class="div3">
+            <div class="div-organizador1">
               <label for="bdate">Birth Date:</label>
               <input type="date" id="bdate" name="birth_date" class="linea-input">                
-              <div class="div1 margen1">            
+              <div class="div-organizador2 margen1">            
                 <p>Gender:</p>
                 <input type="radio" id="female" name="gender" value="Female">
                 <label for="female">Female</label>
@@ -67,7 +67,7 @@
               </div>
             </div>              
 
-            <div class="div1">
+            <div class="div-organizador2">
               <p>Grade:</p>
               <input type="radio" id="preschool" name="grade" value="Pre-School">
               <label for="preschool">Pre-School</label>
@@ -82,7 +82,7 @@
               <input type="radio" id="5th" name="grade" value="5th">
               <label for="5th">5th</label>
             </div>          
-          </fieldset>         
+          </fieldset>            
 
           <fieldset class="espacio-inf">
             <h3>Which elementary school do you live near?</h3>            
@@ -100,12 +100,12 @@
 
           <fieldset class="espacio-inf">
             <h3>What position(s) do you normally play? (check all that apply)</h3>    
-            <div class="div1">
-              <div class="div2">
+            <div class="div-organizador2">
+              <div class="div-organizador3">
                 <label><input type="checkbox" id="position1" name="position1" value="Forward"> Forward</label>
                 <label><input type="checkbox" id="position2" name="position2" value="Forward"> Midfield</label>
               </div>
-              <div class="div2">
+              <div class="div-organizador3">
                 <label><input type="checkbox" id="position3" name="position3" value="Forward"> Defense</label>
                 <label><input type="checkbox" id="position4" name="position4" value="Forward"> Goalkeeper</label>
               </div>            
@@ -114,14 +114,14 @@
 
           <fieldset class="espacio-inf">
             <h3>Uniform Size:</h3> 
-            <div class="div1">
-              <div class="div2">
+            <div class="div-organizador2">
+              <div class="div-organizador3">
                 <label><input type="checkbox" id="size1" name="size1" value="Youth_Small"> Youth Small</label>
                 <label><input type="checkbox" id="size2" name="size2" value="Youth_Medium"> Youth Medium</label>
                 <label><input type="checkbox" id="size3" name="size3" value="Youth_Large"> Youth Large</label>
                 <label><input type="checkbox" id="size4" name="size4" value="Small"> Small</label>                          
               </div>
-              <div class="div2">
+              <div class="div-organizador3">
                 <label><input type="checkbox" id="size5" name="size5" value="Medium"> Medium</label>
                 <label><input type="checkbox" id="size6" name="size6" value="Large"> Large</label>
                 <label><input type="checkbox" id="size7" name="size7" value="Extra_Large"> Extra Large</label>
